k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hrms
  labels:
    app.kubernetes.io/name: hrms-lite
    app.kubernetes.io/part-of: hrms-platform
