k8s/kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hrms-kafka
  namespace: hrms
  labels:
    app: hrms-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hrms-kafka
  template:
    metadata:
      labels:
        app: hrms-kafka
    spec:
      containers:
        - name: kafka
          image: bitnami/kafka:3.5
          ports:
            - containerPort: 9092
              name: kafka
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1024Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: hrms-kafka
  namespace: hrms
spec:
  ports:
    - port: 9092
      name: kafka
      targetPort: 9092
  selector:
    app: hrms-kafka
